Fix overflow on touch devices

--- a/public/style.css
+++ b/public/style.css
@@ -31,11 +31,12 @@
 /* main structure */
 html,
 body {
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   line-height: 1;
+  overflow: auto;
 }
 
 body {
